--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -10,7 +10,7 @@
 
 <!-- @@common_editableSP(studyplan, courses, courseForm) -->
 
-@externCourseFormModal(courseForm, "/student/studyplan")
+@externCourseFormModal(courseForm, routes.Students.newExternCourse())
 
 <!-- Fine dialog del nuovo corso -->
 
