--- a/courses/app/views/externcourseform.scala.html
+++ b/courses/app/views/externcourseform.scala.html
@@ -1,70 +1,71 @@
-@(courseForm: Form[Course], urlChiamante: String)
+@(courseForm: Form[Course], submitController: play.api.mvc.Call)
 
 <!-- IMPORTANTE: rimuovere le voci che NON servono ai CORSI ESTERNI! -->
 
 @import helper._
 @import helper.twitterBootstrap._
-    
-@helper.form(action = routes.SecuredApplication.newExternCourse) {
+
+@helper.form(action = submitController) {
        <fieldset>
             <legend>Account informations</legend>
+
             @inputText(
                 courseForm("courseName"),
-                '_label -> "Course name",
-                '_help -> "Please enter the course name"
+                '_label -> "Course name"
             )
+
             @inputText(
-                courseForm("notes"), 
-                '_label -> "Notes", 
+                courseForm("notes"),
+                '_label -> "Notes",
                 '_error -> courseForm.globalError
             )
-            
+
             @inputText(
                 courseForm("institution"),
                 '_label -> "Institution"
             )
-            
+
             @inputText(
                 courseForm("place"),
                 '_label -> "Place"
             )
-            
+
             @inputText(
                 courseForm("plannedCoursePeriod"),
                 '_label -> "Planned course period"
             )
-            
+
             @inputText(
                 courseForm("url"),
                 '_label -> "Url"
             )
-                        
+
             @inputText(
                 courseForm("credits"), 
                 '_label -> "Credits", 'class -> "mini",
                 '_showConstraints -> false
             )
-            
+
             @inputText(
                 courseForm("accademicYear"), 
                 '_label -> "Accademic year", 'class -> "mini",
                 '_showConstraints -> false
             )
-            
+
             @inputText(
                 courseForm("budgetedCost"), 
                 '_label -> "Budgeted cost", 'class -> "mini",
                 '_showConstraints -> false
             )
-            
+
             @inputText(
                 courseForm("actualCost"), 
                 '_label -> "Actual cost", 'class -> "mini",
                 '_showConstraints -> false
             )
-                        
+
             @select(
-                courseForm("professor.supervisorID"), 
+                courseForm("professor"), 
                 options(Supervisor.options),
                 '_default -> "--- Choose the professor ---",
                 '_label -> "Professors",
@@ -74,48 +75,43 @@
             @checkbox(
                 courseForm("isInManifesto"), 
                 '_label -> "Is in manifesto",
-                '_showConstraints -> false)
+                '_showConstraints -> false
             )
-            
+
             @checkbox(
                 courseForm("isByUNITN"), 
                 '_label -> "Is a UNITN course",
-                '_showConstraints -> false)
+                '_showConstraints -> false
             )
-            
+
             @checkbox(
                 courseForm("isPaid"), 
                 '_label -> "Is paid",
-                '_showConstraints -> false)
+                '_showConstraints -> false
             )
-            
+
             @checkbox(
                 courseForm("areAllMarksDefined"), 
                 '_label -> "All marks defined",
-                '_showConstraints -> false)
+                '_showConstraints -> false
             )
-            
+
             @checkbox(
                 courseForm("isPaymentCompleted"), 
                 '_label -> "Payment completed",
-                '_showConstraints -> false)
+                '_showConstraints -> false
             )
-            
+
             @checkbox(
                 courseForm("deleted"), 
                 '_label -> "Is deleted",
-                '_showConstraints -> false)
+                '_showConstraints -> false
             )
-            
-            <input type="hidden" name="chiamante" id="urlchiamante" value="@urlChiamante" />
-               
         </fieldset>
-        
         <div class="actions">
             <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
             <input type="submit" class="btn btn-large btn-primary" value="Submit">
         </div>
-        
+
     }
-    
-       
+
