pagina admin: studente + common-view

--- a/courses/app/views/admin_students_details.scala.html
+++ b/courses/app/views/admin_students_details.scala.html
@@ -10,6 +10,7 @@
 
 <!-- Parte centrale -->
 
-
+@common_editableSP(user, selectedStudent, studyplan, courses, courseForm)
+@common_studentCareer(user, enrollments)
 
 }
