--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -16,10 +16,10 @@
     </thead>
     <tbody>
         @for(student <- students) {
-          <tr>
-            <td>@student.firstName</td>
-            <td>@student.lastName</td>
-            <td>@student.printIsPlanApproved</td>
+          <tr>            
+              <td><a href=@routes.Admins.studentDetails(student.userID.longValue())>@student.firstName</a></td>
+              <td>@student.lastName</td>
+              <td>@student.printIsPlanApproved</td>
           </tr>
         }
     </tbody>
