--- a/courses/app/views/common_editableSP.scala.html
+++ b/courses/app/views/common_editableSP.scala.html
@@ -1,8 +1,10 @@
 @(user: UserCredentials, selectedStudent: Student, studyplan: List[Course], courses: List[Course], courseForm: Form[Course])
 
+<!-- Inclusioni Modal -->
+
+@studentDetailsModal(selectedStudent)
+
 <!-- Dialog del Nuovo Corso -->
-
-
 
 @externCourseFormModal(courseForm, routes.Students.newExternCourse())
 
@@ -20,6 +22,9 @@
 
 <div class="row-fluid">
   <h2 align="center">@selectedStudent.fullName</h2>
+  @if(user.isAdmin()) {
+    <a data-toggle="modal" href="#windowTitleDialog_studentDetails">Modifica anagrafica</a>
+  }
 </div>
 
 </br>
