form corso esterno

--- a/courses/app/views/courseform.scala.html
+++ b/courses/app/views/courseform.scala.html
@@ -104,7 +104,11 @@
                 '_label -> "Is deleted",
                 '_showConstraints -> false)
             )
-               
+
+            @inputDate(
+                courseForm("actualStartDate"),
+                '_label -> "Start Date (yyyy-mm-dd)"
+            )               
         </fieldset>
         
         <div class="actions">
