auto-visualizzazione del form nuovo corso in caso di errori

--- a/courses/app/views/admin_base.scala.html
+++ b/courses/app/views/admin_base.scala.html
@@ -29,9 +29,7 @@
 Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
 
 } {
-
-<script language="JavaScript">
-    
-</script>
+ 
+<!-- script admin_base -->
 
 }
