--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -47,6 +47,8 @@
 Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>
 
 } {
+ 
+<!-- script advisor_base -->
 
 @script
 
