--- a/courses/app/views/authIndex.scala.html
+++ b/courses/app/views/authIndex.scala.html
@@ -21,8 +21,8 @@ Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout<
     }
 
 } {
-
-<!-- no script -->
+ 
+<!-- script authIndex -->
 
 }
 
