--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -61,4 +61,10 @@
             <h1>Aggiungi qualcosa qui</h1>
 
 
-} { @authstate } { @script }
+} { @authstate } {
+ 
+<!-- script index -->
+
+@script
+
+}
