--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -2,10 +2,11 @@
 
 <!DOCTYPE html>
 <html lang="en">
- <head> 
+<head> 
  
  @script
 
+<!-- script main -->
 <script language="JavaScript">
 
     function havefun() {
