--- a/courses/app/views/students_base.scala.html
+++ b/courses/app/views/students_base.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials)(sideContents: Html)(centralContents: Html)
+@(user: UserCredentials)(sideContents: Html)(centralContents: Html)(scripts: Html)
 
 @main { 
 
@@ -22,6 +22,8 @@ Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout<
 
 } {
 
+<!-- script student_base -->
 
+@scripts
 
 }
