--- a/courses/app/views/authIndex.scala.html
+++ b/courses/app/views/authIndex.scala.html
@@ -7,17 +7,24 @@ Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout<
 } {
 
     @if(Secured.isSupervisor(user)) {
-        <ul class="nav nav-list">
-            <li class="nav-header"><font size="4" face="Courier">Advisor</font></li>
-            <li><a href="/supervisor"><font size="3" face="Courier">Torna alla pagina advisor</font></a></li>
-        </ul>
+      <ul class="nav nav-list">
+        <li class="nav-header"><font size="4" face="Courier">Advisor</font></li>
+        <li><a href="@routes.Supervisors.index()"><font size="3" face="Courier">Torna alla pagina advisor</font></a></li>
+      </ul>
     } else {
-        @if(Secured.isStudent(user)) {
-            <ul class="nav nav-list">
-                <li class="nav-header"><font size="4" face="Courier">Studente</font></li>
-                <li><a href="/student"><font size="3" face="Courier">Torna alla pagina studente</font></a></li>
-            </ul>
+      @if(Secured.isStudent(user)) {
+        <ul class="nav nav-list">
+          <li class="nav-header"><font size="4" face="Courier">Studente</font></li>
+          <li><a href="@routes.Students.index()"><font size="3" face="Courier">Torna alla pagina studente</font></a></li>
+        </ul>
+      } else {
+        @if(Secured.isAdmin(user)) {
+          <ul class="nav nav-list">
+            <li class="nav-header"><font size="4" face="Courier">Admin</font></li>
+            <li><a href="@routes.Admins.index()"><font size="3" face="Courier">Torna alla pagina amministratore</font></a></li>
+          </ul>
         }
+      }
     }
 
 } {
