--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -14,7 +14,7 @@
 
 <!-- script student_studyplans -->
 
-@if(courseForm.hasGlobalErrors) {
+@if(courseForm.hasErrors) {
   <script language="JavaScript">
   function autofun() {
     $('#windowTitleDialog_newExternCourse').modal('show')
