--- a/courses/app/views/admin_base.scala.html
+++ b/courses/app/views/admin_base.scala.html
@@ -1,28 +1,28 @@
-@(user: UserCredentials)(sideContents: Html)(centralContents: Html)
+@(user: UserCredentials)(sideContents: Html)(centralContents: Html)(modals: Html)
 
 @main { 
 
 <!---parte sx -->
 
 <ul class="nav nav-list">
-              <li class="nav-header"><font size="4" face="Courier">Administrator</font></li> <!-- tag scala nome studente -->
-              <li><a  href="@routes.Admins.courses()" ><font size="3" face="Courier"></font>Courses</a></li>
-              <li><a  href="@routes.Admins.students()" ><font size="3" face="Courier"></font>Students</a></li>
-	      <li><a  href="@routes.Admins.supervisors(-1)" ><font size="3" face="Courier"></font>Supervisors</a></li>
-	      <li><a  href="@routes.Admins.credentials()" ><font size="3" face="Courier"></font>Credentials</a></li>
-	@sideContents
+  <li class="nav-header"><font size="4" face="Courier">Administrator</font></li> <!-- tag scala nome studente -->
+  <li><a  href="@routes.Admins.courses()" ><font size="3" face="Courier"></font>Courses</a></li>
+  <li><a  href="@routes.Admins.students()" ><font size="3" face="Courier"></font>Students</a></li>
+  <li><a  href="@routes.Admins.supervisors(-1)" ><font size="3" face="Courier"></font>Supervisors</a></li>
+  <li><a  href="@routes.Admins.credentials()" ><font size="3" face="Courier"></font>Credentials</a></li>
+  
+  @sideContents
 </ul>
+
 } {
  
 <!---parte centrale -->
 
+@modals
+
 <div class="row-fluid">	  
 	@centralContents
-</div><!--Row-->
-
-
-
-
+</div>
 
 } {
 
