--- a/courses/app/views/admin_suspended_students.scala.html
+++ b/courses/app/views/admin_suspended_students.scala.html
@@ -11,6 +11,7 @@
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -18,14 +19,16 @@
           <tr>
             <td>@student.firstName</td>
             <td>@student.lastName</td>
+            <td><a href="@routes.Admins.unsuspendStudent(student.userID.longValue)" >Riammetti</a></td>
           </tr>
         }
     </tbody>
   </table>
-  <br>
-  <br>
+  <br />
+  <br />
 </div><!--span1 -->
 } {
 
+<!-- modal aggiuntivi -->
 
 }
