--- a/courses/app/views/common_editableSP.scala.html
+++ b/courses/app/views/common_editableSP.scala.html
@@ -30,7 +30,6 @@
 </br>
 </br>
 <div class="row-fluid">
- 
   <div class="span6">
     <h2>StudyPlan
       @if(user.isStudent()) {
@@ -86,25 +85,26 @@
          <button type="submit" class="btn">Search</button>
        </form>
      -->
-    <h2>Lista Corsi</h2>
+    <h2>Courses</h2>
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>#</th>
-          <th>Nome Corso</th>
-          <th>Docente</th>
-          <th></th>
+          <th>Course Name</th>
+          <th>Professor</th>
+          <th>Type</th>
+          <th>Start Date</th>
         </tr>
       </thead>
       <tbody>
         @for(course <- courses) {
            <tr>
-	     <td>@course.courseID</td>
-	     <td>@course.courseName</a></td>
+	     <td>@course.courseName</td>
              <td>@if(course.professor != null) {
 	           @course.getProfessor.lastName
                  }
 	     </td>
+             <td>@course.printType</td>
+             <td>@course.printActualStartDate</td>
              <td><a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{course.courseID}"><img src="@routes.Assets.at("images/details.png")" /></a></td>
              <td><a href="/student/addtosp/@course.courseID/@selectedStudent.userID"><img src="@routes.Assets.at("images/addicon.png")" /></a></td>
            </tr>
