visualizzazione crediti studente a lato

--- a/courses/app/views/students_careers.scala.html
+++ b/courses/app/views/students_careers.scala.html
@@ -2,9 +2,11 @@
 
 @students_base(user) {
 
-<li class="nav-header"><font size="4" face="Courier">TotaleCrediti</font></li>
-<li> <font size="3" face="Courier">Interni:</font></li>
-<li> <font size="3" face="Courier">Esterni:</font></li>
+<li class="nav-header"><font size="4" face="Courier">Total Credits</font></li>
+<li> <font size="3" face="Courier">Internal:</font></li>
+<p>@user.getStudent.getInternalCredits</p>
+<li> <font size="3" face="Courier">External:</font></li>
+<p>@user.getStudent.getExternalCredits</p>
 
 } {
 
