modificata cariera per avere solo corsi finiti

--- a/courses/app/views/admin_students_details.scala.html
+++ b/courses/app/views/admin_students_details.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, selectedStudent: Student, studyplan: List[Course], courses: List[Course], courseForm: Form[Course], enrollments: Set[CourseEnrollment])
+@(user: UserCredentials, selectedStudent: Student, studyplan: List[Course], courses: List[Course], courseForm: Form[Course], enrollments: List[CourseEnrollment])
 
 @admin_base(user) {
 
