suspend/unsuspend student

--- a/courses/app/views/common_editableSP.scala.html
+++ b/courses/app/views/common_editableSP.scala.html
@@ -23,7 +23,7 @@
 <div class="row-fluid">
   <h2 align="center">@selectedStudent.fullName</h2>
   @if(user.isAdmin()) {
-    <a data-toggle="modal" href="#windowTitleDialog_studentDetails">Modifica anagrafica</a>
+    <a data-toggle="modal" href="#windowTitleDialog_studentDetails">Dettagli studente</a>
   }
 </div>
 
