--- a/courses/app/views/studentdetails.scala.html
+++ b/courses/app/views/studentdetails.scala.html
@@ -1,4 +1,33 @@
 @(student: Student)
 
+<!-- Modal -->
+
+<div class="modal hide fade" id="studentDetails_confirmAction" style="display: none; ">
+
+  <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3>Conferma operazione</h3>
+  </div>
+
+  <div class="modal-body">
+    <p>
+      Procedendo con l'operazione lo studente verrà sospeso. Continuare?
+    </p>
+    <a data-dismiss="modal" href="#" class="btn btn-large">Annulla</a>
+    <a href="@routes.Admins.suspendStudent(student.userID.longValue)" class="btn btn-primary btn-large">Sospendi lo studente</a>
+  </div>
+    
+</div>
+
+<!-- Form -->
+
   mettici un form dio la fagiana!    
+
+<div>
+  @if(student.isSuspended() == false) {
+    <a data-toggle="modal" href="#studentDetails_confirmAction" class="btn">Sospendi studente</a>
+  }
+</div>
 
