--- a/courses/app/views/students_careers.scala.html
+++ b/courses/app/views/students_careers.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, enrollments: Set[CourseEnrollment])
+@(user: UserCredentials, enrollments: List[CourseEnrollment])
 
 @students_base(user) {
 
