--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, student: Student, studyplan: List[Course], courses: List[Course], courseForm: Form[Course])
+@(user: UserCredentials, student: Student, studyplan: List[Course], courses: List[Course], courseForm: Form[Course], displayAppReqModal: String)
 
 @students_base(user) {
 
@@ -8,6 +8,28 @@
 <li> <font size="3" face="Courier">External:</font></li>
 <p>@student.externalCreditsSP</p>
 } {
+
+<!-- Modal -->
+
+<div class="modal hide fade" id="windowTitleDialog_appreq" style="display: none; ">
+
+    <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3>Richiesta di approvazione Study Plan</h3>
+  </div>
+
+  <div class="modal-body">
+    <p>
+      @displayAppReqModal
+    </p>
+    <a data-dismiss="modal" href="#" class="btn btn-primary btn-large">Ok</a>
+  </div>
+    
+</div>
+
+<!-- Corpo della pagina -->
 
 @common_editableSP(user, student, studyplan, courses, courseForm)
 
@@ -21,6 +43,14 @@
     $('#windowTitleDialog_newExternCourse').modal('show')
   }
   </script>
+} else {
+    @if(displayAppReqModal != "") {
+    <script language="JavaScript">
+    function autofun() {
+      $('#windowTitleDialog_appreq').modal('show')
+    }
+    </script>
+    }
 }
 
 }
