--- a/courses/app/views/students_careers.scala.html
+++ b/courses/app/views/students_careers.scala.html
@@ -4,9 +4,13 @@
 
 <li class="nav-header"><font size="4" face="Courier">Total Credits</font></li>
 <li> <font size="3" face="Courier">Internal:</font></li>
-<p>@user.getStudent.getInternalCredits</p>
+<p>
+  @user.getStudent.getInternalCredits
+</p>
 <li> <font size="3" face="Courier">External:</font></li>
-<p>@user.getStudent.getExternalCredits</p>
+<p>
+  @user.getStudent.getExternalCredits
+</p>
 
 } {
 
