--- a/courses/app/views/common_editableSP.scala.html
+++ b/courses/app/views/common_editableSP.scala.html
@@ -23,8 +23,8 @@
   }
 </div>
 
-</br>
-</br>
+<br />
+<br />
 <div class="row-fluid">
   <div class="span6">
     <h2>StudyPlan
@@ -54,19 +54,24 @@
         </tr>
       </thead>
       <tbody>
-      @for(course <- studyplan) {
-        <tr>
-	  <td>@course.courseName</td>
-	  <td>@if(course.professor != null)  {
-                @course.getProfessor.lastName
-              }
-	  </td>
-          <td>@course.printType</td>
-          <td>@course.printActualStartDate</td>
-	  <td><a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{course.courseID}"><img src="@routes.Assets.at("images/details.png")" /></a></td>
-	    <td><a href="/student/rmfromsp/@course.courseID/@selectedStudent.userID"><img src="@routes.Assets.at("images/removeicon.gif")" /></a></td>
-        </tr>
-      }
+        @for(course <- studyplan) {
+          <tr>
+            <td>@course.courseName</td>
+            <td>@if(course.professor != null)  { @course.getProfessor.lastName } </td>
+            <td>@course.printType</td>
+            <td>@course.printActualStartDate</td>
+            <td>
+              <a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{course.courseID}">
+                <img src="@routes.Assets.at("images/details.png")" />
+              </a>
+            </td>
+            <td>
+              <a href="/student/rmfromsp/@course.courseID/@selectedStudent.userID">
+                <img src="@routes.Assets.at("images/removeicon.gif")" />
+              </a>
+            </td>
+          </tr>
+        }
       </tbody>
     </table>
     <p align="center">
@@ -95,17 +100,22 @@
       </thead>
       <tbody>
         @for(course <- courses) {
-           <tr>
-	     <td>@course.courseName</td>
-             <td>@if(course.professor != null) {
-	           @course.getProfessor.lastName
-                 }
-	     </td>
-             <td>@course.printType</td>
-             <td>@course.printActualStartDate</td>
-             <td><a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{course.courseID}"><img src="@routes.Assets.at("images/details.png")" /></a></td>
-             <td><a href="/student/addtosp/@course.courseID/@selectedStudent.userID"><img src="@routes.Assets.at("images/addicon.png")" /></a></td>
-           </tr>
+          <tr>
+            <td>@course.courseName</td>
+            <td>@if(course.professor != null) { @course.getProfessor.lastName } </td>
+            <td>@course.printType</td>
+            <td>@course.printActualStartDate</td>
+            <td>
+              <a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{course.courseID}">
+                <img src="@routes.Assets.at("images/details.png")" />
+              </a>
+            </td>
+            <td>
+              <a href="/student/addtosp/@course.courseID/@selectedStudent.userID">
+                <img src="@routes.Assets.at("images/addicon.png")" />
+              </a>
+            </td>
+          </tr>
         }
       </tbody>
     </table>
