--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -4,9 +4,14 @@
 
 <li class="nav-header"><font size="4" face="Courier">Credits in Study Plan</font></li>
 <li> <font size="3" face="Courier">Internal:</font></li>
-<p>@student.internalCreditsSP</p>
-<li> <font size="3" face="Courier">External:</font></li>
-<p>@student.externalCreditsSP</p>
+<p>
+  @student.internalCreditsSP
+</p>
+<li><font size="3" face="Courier">External:</font></li>
+<p>
+  @student.externalCreditsSP
+</p>
+
 } {
 
 <!-- Modal -->
