--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -1,4 +1,7 @@
-@(user: UserCredentials, students: List[Student])
+@(user: UserCredentials, students: List[Student], newStudentForm: Form[Student])
+
+@import helper._
+@import helper.twitterBootstrap._
 
 @admin_base(user) {
 
@@ -19,7 +22,7 @@
     </thead>
     <tbody>
       @for(student <- students) {
-        <tr>            
+        <tr>
           <td><a href=@routes.Admins.studentDetails(student.userID.longValue())>@student.firstName</a></td>
           <td>@student.lastName</td>
           <td>@student.printIsPlanApproved</td>
@@ -27,9 +30,8 @@
       }
     </tbody>
   </table>
-  
-  <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Sodomizza ritardatari</a>
-  
+  <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Sodomizza nell'ano ritardatari</a>
+  <a data-toggle="modal" href="#windowTitleDialog_newStudent" class="btn btn-primary">Create new student</a>
   <br />
   <br />
 </div><!--span1 -->
@@ -59,7 +61,165 @@
     <a data-dismiss="modal" href="#" class="btn btn-large">Annulla</a>
     <a data-dismiss="modal" href="#" class="btn btn-primary btn-large">Manda avviso</a>
   </div>
-  
 </div>
 
+<!-- modal create student -->
+
+<div class="modal hide fade" id="windowTitleDialog_newStudent" style="display: none; ">
+  <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3>Create new student</h3>
+  </div>
+  <div class="modal-body">
+    @helper.form(action = routes.Admins.newStudent())  {
+      <fieldset>
+        @inputText(
+        newStudentForm("firstName"),
+        '_label -> "First name"
+        )
+
+        @inputText(
+        newStudentForm("lastName"),
+        '_label -> "Last name"
+        )
+
+       <!-- @inputText(
+        newStudentForm("courseYear"),
+        '_label -> "Course year",
+        'class -> "mini",
+        '_showConstraints -> false
+        )-->
+
+       <!-- @@checkbox(
+        newStudentForm("admittedConditionally"), 
+        '_label -> "Admitted conditionally",
+        '_showConstraints -> false) -->
+
+        @inputText(
+        newStudentForm("legalResidence"),
+        '_label -> "Legal residence"
+        )
+
+        @inputText(
+        newStudentForm("currentDomicile"),
+        '_label -> "Current domicile"
+        )
+
+        @inputDate(
+        newStudentForm("dateOfBirth"),
+        '_label -> "Date of birth (yyyy-mm-dd)"
+        )
+
+        @inputText(
+        newStudentForm("placeOfBirth"),
+        '_label -> "Place of birth"
+        )
+
+        @inputText(
+        newStudentForm("officePhone"),
+        '_label -> "Office phone"
+        )
+
+        @inputText(
+        newStudentForm("mobilePhone"),
+        '_label -> "Mobile Phone"
+        )
+
+        @inputText(
+        newStudentForm("yearExtensionScholariship"),
+        '_label -> "Year exetension scholariship",
+        'class -> "mini",
+        '_showConstraints -> false
+        )
+
+        <!--@inputText(
+        newStudentForm("commiteeMembers"),
+        '_label -> "Commitee members"
+        )-->
+
+        @inputText(
+        newStudentForm("email"),
+        '_label -> "Email"
+        )
+
+        @select(
+        newStudentForm("currentAdvisor.supervisorID"), 
+        options(Supervisor.options),
+        '_default -> "--- Choose the advisor ---",
+        '_label -> "Advisor",
+        '_error -> newStudentForm("currentAdvisor").error.map(_.withMessage("Please select the advisor"))
+        )
+
+        <!--@select(
+        newStudentForm("isPlanApproved"),
+        options("0" -> "Not yet completed", "1" -> "Waiting for approval", "2" -> "Approved"),
+        '_default -> "--- Select an option ---",
+        '_label -> "Study Plan",
+        '_error -> newStudentForm("isPlanApproved").error.map(_.withMessage("Please select an option"))
+        )-->
+
+        @inputText(
+        newStudentForm("scholarshipType"),
+        '_label -> "Scholarship type"
+        )
+
+        @inputText(
+        newStudentForm("phdCycle"),
+        '_label -> "Phd cycle"
+        )
+
+        @inputText(
+        newStudentForm("yearExtensionScholarship"),
+        '_label -> "Year extension scholarship"
+        )
+
+
+        @inputText(
+        newStudentForm("lockerNumber"),
+        '_label -> "Locker Number"
+        )
+
+        @inputText(
+        newStudentForm("officeWorkingPlace"),
+        '_label -> "Office working place"
+        )
+
+        <input type="hidden" value="" name="commiteeMembers"/>
+
+<!--
+        <input type="hidden" value="@newStudentForm("officeWorkingPlace").value" name="officeWorkingPlace"/>
+        <input type="hidden" value="@newStudentForm("fullName").value" name="FullName"/>
+        <input type="hidden" value="@newStudentForm("isSuspended").value" name="isSuspended"/>
+        <input type="hidden" value="@newStudentForm("phdScholarship").value" name="phdScholarship"/>
+        <input type="hidden" value="@newStudentForm("yearlyFeeToSchool").value" name="yearlyFeeToSchool"/>
+        <input type="hidden" value="@newStudentForm("yearlyFeeToCenter").value" name="yearlyFeeToCenter"/>
+        <input type="hidden" value="@newStudentForm("hasPcRights").value" name="hasPcRights"/>
+        <input type="hidden" value="@newStudentForm("preDoctoralScholarship").value" name="preDoctoralScholarship"/>
+        <input type="hidden" value="@newStudentForm("monthsPredocScholarship").value" name="monthsPredocScholarship"/>
+        <input type="hidden" value="@newStudentForm("yearExtensionScholarship").value" name="yearExtensionScholarship"/>
+        <input type="hidden" value="@newStudentForm("months").value" name="months"/>
+        <input type="hidden" value="@newStudentForm("personalFundsAvailable").value" name="personalFundsAvailable"/>
+        <input type="hidden" value="@newStudentForm("isGraduated").value" name="isGraduated"/>
+        <input type="hidden" value="@newStudentForm("graduationDate").value" name="graduationDate"/>
+        <input type="hidden" value="@newStudentForm("deleted").value" name="deleted"/>
+        <input type="hidden" value="@newStudentForm("fundingInstitution.fundinginstitutionID").value" name="fundingInstitution.fundinginstitutionID"/>
+        <input type="hidden" value="@newStudentForm("university.universityID").value" name="university.universityID"/>
+        <input type="hidden" value="@newStudentForm("countryOfProvenance.countryID").value" name="countryOfProvenance.countryID"/>
+        <input type="hidden" value="@newStudentForm("universityOfProvenance.universityID").value" name="universityOfProvenance.universityID"/>
+        <input type="hidden" value="@newStudentForm("citizenship.countryID").value" name="citizenship.countryID"/>
+        <input type="hidden" value="@newStudentForm("tutor.supervisorID").value" name="tutor.supervisorID"/>
+        <input type="hidden" value="@newStudentForm("fundsOwner.supervisorID").value" name="fundsOwner.supervisorID"/>
+        <input type="hidden" value="@newStudentForm("ItalianTaxpayerCode").value" name="ItalianTaxpayerCode"/>
+        <input type="hidden" value="@newStudentForm("photoProfiled").value" name="photoProfiled"/>
+        <input type="hidden" value="@newStudentForm("user.usercredentialID").value" name="user.usercredentialID"/>  -->
+      </fieldset>
+    <div class="actions">
+      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
+      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+    </div>
+  }
+  </div>
+</div>
 }
