--- a/courses/app/views/admin_credentials.scala.html
+++ b/courses/app/views/admin_credentials.scala.html
@@ -1,4 +1,7 @@
-@(user: UserCredentials, credentials: List[UserCredentials], roles: List[UserRole])
+@(user: UserCredentials, credentials: List[UserCredentials], roles: List[UserRole], ucForm: Form[UserCredentials], urForm: Form[UserRole])
+
+@import helper._
+@import helper.twitterBootstrap._
 
 @admin_base(user) {
 
@@ -18,13 +21,13 @@
         @for(credential <- credentials) {
           <tr>
             <td>@credential.userName</td>
-            <td>@credential.getUserRol().role</td>
+            <td>@credential.getRole().role</td>
           </tr>
         }
       </tbody>
     </table>
   <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newcredential" class="btn btn-primary btn-large">Create New Credential</a>
+    <a data-toggle="modal" href="#windowTitleDialog_newUsercredential" class="btn btn-primary btn-large">Create New Credential</a>
     <br />
     <br />
   </p>
@@ -47,11 +50,75 @@
     </tbody>
   </table>
   <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newrole" class="btn btn-primary btn-large">Create New Role</a>
+    <a data-toggle="modal" href="#windowTitleDialog_newRole" class="btn btn-primary btn-large">Create New Role</a>
     <br />
     <br />
   </p>
 </div>
+
+<!-- modal create usercredential -->
+
+<div class="modal hide fade" id="windowTitleDialog_newUsercredential" style="display: none; ">
+  <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3>Create new UserCredential</h3>
+  </div>
+  <div class="modal-body">
+    @helper.form(action = routes.Admins.newUserCredential())  {
+      <fieldset>
+        @inputText(
+        ucForm("userName"),
+        '_label -> "Username"
+        )
+
+        @inputPassword(
+        ucForm("password"),
+        '_label -> "Password"
+        )
+
+        @select(
+        ucForm("userRol.userrolID"), 
+        options(UserRole.options),
+        '_default -> "--- Select the role ---",
+        '_label -> "Role",
+        '_error -> ucForm("userRol").error.map(_.withMessage("Please select the Role"))
+        )
+      </fieldset>
+    <div class="actions">
+      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
+      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+    </div>
+  }
+  </div>
+</div>
+
+<!-- modal role -->
+
+<div class="modal hide fade" id="windowTitleDialog_newRole" style="display: none; ">
+  <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3>Create new Role</h3>
+  </div>
+  <div class="modal-body">
+    @helper.form(action = routes.Admins.newUserRole())  {
+      <fieldset>
+        @inputText(
+        urForm("role"),
+        '_label -> "Role"
+        )
+      </fieldset>
+    <div class="actions">
+      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
+      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+    </div>
+  }
+  </div>
+</div>
+
 
 } {
 
