--- a/courses/app/views/admin_supervisors.scala.html
+++ b/courses/app/views/admin_supervisors.scala.html
@@ -1,4 +1,7 @@
-@(user: UserCredentials, supervisors: List[Supervisor], supervisorId: Long)
+@(user: UserCredentials, supervisors: List[Supervisor], supervisorId: Long, supervisorForm: Form[Supervisor])
+
+@import helper._
+@import helper.twitterBootstrap._
 
 @admin_base(user) {
 
@@ -31,6 +34,7 @@
         }
     </tbody>
   </table>
+  <a data-toggle="modal" href="#windowTitleDialog_newSupervisor" class="btn btn-primary">Create new supervisor</a>
   <br />
   <br />
 </div><!--span1 -->
@@ -47,7 +51,7 @@
       </tr>
     </thead>
     <tbody>
-      @for(student <- Supervisor.find.byId(supervisorId).getStudentsAdvisored()) {
+      @for(student <- Supervisor.find.byId(supervisorId).getStudentsAdvisored())        {
           <tr>
               <td>@student.userID</td>
               <td>@student.firstName</td>
@@ -60,6 +64,68 @@
   <br />
 </div><!--span1 -->
 }
+<!-- modal create supervisor -->
+
+<div class="modal hide fade" id="windowTitleDialog_newSupervisor" style="display: none; ">
+  <div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">
+      <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
+    </a>
+    <h3>Create new supervisor</h3>
+  </div>
+  <div class="modal-body">
+    @helper.form(action = routes.Admins.newSupervisor())  {
+      <fieldset>
+        @inputText(
+        supervisorForm("firstName"),
+        '_label -> "First name"
+        )
+
+        @inputText(
+        supervisorForm("lastName"),
+        '_label -> "Last name"
+        )
+
+        @checkbox(
+        supervisorForm("canBeAdvisor"), 
+        '_label -> "Can be advisor",
+        '_showConstraints -> false)
+
+        <input type="hidden" value="1" name="isActive"/>
+        <input type="hidden" value="0" name="deleted"/>
+      <!--  @@checkbox(
+        supervisorForm("isActive"), 
+        '_label -> "Is Active",
+        '_showConstraints -> false)
+        )-->
+
+        @checkbox(
+        supervisorForm("isInternal"), 
+        '_label -> "Is Internal",
+        '_showConstraints -> false)
+
+        @inputText(
+        supervisorForm("email"),
+        '_label -> "Email"
+        )
+
+        (<a href=@routes.Admins.credentials()>Create it</a>)
+        @select(
+        supervisorForm("user.usercredentialID"), 
+        options(UserCredentials.optionsForSupervisor),
+        '_default -> "--- Select the username ---",
+        '_label -> "UserName",
+        '_error -> supervisorForm("user").error.map(_.withMessage("Please select the UserName"))
+        )
+      </fieldset>
+    <div class="actions">
+      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
+      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+    </div>
+  }
+  </div>
+</div>
+
 <!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
 } {
 
