--- a/courses/app/views/admin_courses.scala.html
+++ b/courses/app/views/admin_courses.scala.html
@@ -41,6 +41,7 @@
   <p align="right">
     <a data-toggle="modal" href="#windowTitleDialog_newInternalCourse" class="btn btn-primary btn-large">Aggiungi Nuovo Corso Interno</a>
     <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary btn-large">Aggiungi Nuovo Corso Esterno</a>
+    <a data-toggle="modal" href="@routes.Admins.oldcourses()" class="btn btn-primary btn-large">Show old courses</a>
     <br />
     <br />
 </div><!--span1 -->
