--- a/courses/app/views/admin_oldcourses.scala.html
+++ b/courses/app/views/admin_oldcourses.scala.html
@@ -15,6 +15,7 @@
         <th>Professor</th>
         <th>Year</th>
         <th>Start Date</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -26,7 +27,12 @@
                   }</td>
           <td>@course.academicYear</td>
           <td>@course.printActualStartDate</td>
-        </tr>
+          <td>
+            <a data-toggle="modal" href="@routes.Admins.courseDetails(course.courseID.longValue)">
+              <img src="@routes.Assets.at("images/details.png")" />
+            </a>
+          </td>
+       </tr>
       }
     </tbody>
   </table>
