--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -32,6 +32,7 @@
   </table>
   <a data-toggle="modal" href="#windowTitleDialog_mailtoSR" class="btn btn-primary">Sodomizza nell'ano ritardatari</a>
   <a data-toggle="modal" href="#windowTitleDialog_newStudent" class="btn btn-primary">Create new student</a>
+  <a data-toggle="modal" href="@routes.Admins.suspendedStudents" class="btn btn-primary">View suspended students</a>
   <br />
   <br />
 </div><!--span1 -->
