--- a/courses/app/views/admin_supervisors.scala.html
+++ b/courses/app/views/admin_supervisors.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, supervisors: List[Supervisor], supervisorId: Long, supervisorForm: Form[Supervisor])
+@(user: UserCredentials, supervisors: List[Supervisor], supervisorId: Long, supervisorForm: Form[Supervisor], editSupervisorForm: Form[Supervisor])
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -40,6 +40,10 @@
 </div><!--span1 -->
 
 @if(supervisorId != -1) {
+  @if(user.isAdmin()) {
+    <a data-toggle="modal" href="#windowTitleDialog_supervisorDetails">Supervisor details</a>
+  }
+
 <div class="span6">
   <h2>Students Advisored By @Supervisor.find.byId(supervisorId).lastName</h2>
   <table class="table table-bordered">
@@ -63,6 +67,67 @@
   <br />
   <br />
 </div><!--span1 -->
+
+<!-- modal edit supervisor -->
+
+<div class="modal hide fade" id="windowTitleDialog_supervisorDetails" style="display: none; ">
+  <div class="modal-body">
+    @helper.form(action = routes.Admins.editSupervisor(supervisorId))  {
+      <fieldset>
+        @inputText(
+        editSupervisorForm("firstName"),
+        '_label -> "First name"
+        )
+
+        @inputText(
+        editSupervisorForm("lastName"),
+        '_label -> "Last name"
+        )
+
+        @checkbox(
+        editSupervisorForm("canBeAdvisor"), 
+        '_label -> "Can be advisor",
+        '_showConstraints -> false)
+
+        @checkbox(
+        editSupervisorForm("isActive"), 
+        '_label -> "Is Active",
+        '_showConstraints -> false)
+
+        @checkbox(
+        editSupervisorForm("deleted"), 
+        '_label -> "Delete",
+        '_showConstraints -> false)
+
+        @checkbox(
+        editSupervisorForm("isInternal"), 
+        '_label -> "Is Internal",
+        '_showConstraints -> false)
+
+        @inputText(
+        editSupervisorForm("email"),
+        '_label -> "Email"
+        )
+
+        <input type="hidden" value="@editSupervisorForm("user.usercredentialID").value" name="user.usercredentialID"/>
+    <!--    @@select(
+        editSupervisorForm("user.usercredentialID"), 
+        options(UserCredentials.optionsForSupervisor),
+        '_default -> editSupervisorForm("user.usr,
+        '_label -> "UserName",
+        '_error -> editSupervisorForm("user").error.map(_.withMessage("Please select the UserName"))
+        )-->
+
+        <input type="hidden" value="@editSupervisorForm("supervisorID").value" name="supervisorID"/>
+      </fieldset>
+    <div class="actions">
+      <a data-dismiss="modal" href="#" class="btn btn-large">Cancel</a>
+      <input type="submit" class="btn btn-large btn-primary" value="Submit">
+    </div>
+  }
+  </div>
+</div>
+
 }
 <!-- modal create supervisor -->
 
@@ -125,6 +190,7 @@
   }
   </div>
 </div>
+
 
 <!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
 } {
