--- a/courses/app/views/admin_credentials.scala.html
+++ b/courses/app/views/admin_credentials.scala.html
@@ -124,4 +124,24 @@
 
 
 
+} {
+
+<!-- script admin_credentials -->
+
+@if(urForm.hasErrors) {
+  <script language="JavaScript">
+  function autofun() {
+    $('#windowTitleDialog_newRole').modal('show')
+  }
+  </script>
+} else {
+    @if(ucForm.hasErrors) {
+    <script language="JavaScript">
+    function autofun() {
+      $('#windowTitleDialog_newUsercredential').modal('show')
+    }
+    </script>
+    }
+}
+
 }
